# diveg

./: .gitignore  404.html  LICENSE  README.md  conda-setup.sh  environment-dev.yml  environment.yml  index.html  insar_grid_mean_480x480.tif  insar_grid_std_480x480.tif  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/workflows/: main.yaml
docs/: index.md
docs/js/: config.js
notebooks/: cwd.py  geometry.ipynb  insar-test.gpkg  rasterisation.ipynb
scripts/: prepare-parallel-run.py  run-with-iqr-lim.py  run.sh
search/: search_index.json
src/diveg/: __init__.py  cli.py  data.py  extensions.py  grid.py  io.py  plots.py  prototype.py  statistics.py
tests/diveg/: test_extensions.py  test_grid.py  test_prototype.py
